@startuml
!include DiagramaClase_Sorpresa.puml!SINSUBCLASES

class Favorable{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}
Favorable ..|> Sorpresa
class Desfavorable{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}
Desfavorable ..|> Sorpresa
class CambioVehiculo{
    + avanzarEn( Vehiculo v ): ModificadorMovimiento
}
CambioVehiculo ..|> Sorpresa

note left
Se me ocurrio crear una nueva clase
que se llame ModificadorMovimiento
que cuya responsabilidad es saber
modificar a la clase Movimiento.

De esta manera podemos encapsular el
Descuento, Aumento de movimientos ya
sea en porcentaje o en penalizaciones
de valor entero.
end note

@enduml

@startuml(id=SINSUBCLASES)
interface Sorpresa{
    + {abstract} avanzarEn( Vehiculo v ): ModificadorMovimiento
}
@enduml

